--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
     box-sizing: border-box;
 }
 
+
+/* Global Styles */
 body {
     font-family: Arial, sans-serif;
     background-color: #1c1c1c;
@@ -38,18 +40,32 @@ header p {
 .grid {
     display: grid;
     gap: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     width: 100%;
     max-width: 1200px;
 }
 
 /* Card Styles */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 .card {
     background-color: #2b2b2b;
     border: 2px solid #555;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    animation: fadeIn 2s ease-in-out;
+    /*  fade-in animation to slow come up the card */
+
 }
 
 .card h2 {
@@ -82,6 +98,7 @@ pre code {
 .card:hover {
     border-color: #ff00ff;
     box-shadow: 0 4px 12px rgba(255, 0, 255, 0.4);
+    transform: scale(1.25);
 }
 
 
@@ -96,10 +113,59 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px;
+    padding: 15px;
     background-color: #1c1c1c;
     border-top: 2px solid #555;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.3);
 
+}
 
+/*Resposive Media*/
 
+/* Large Desktop*/
+@media (min-width: 1200px) {
+    .grid {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    header h1 {
+        font-size: 2.5em;
+    }
+}
+
+/* Tablets and smaller Desktop */
+@media (min-width: 768px) and (max-width: 1199px) {
+    .grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    header h1 {
+        font-size: 1.8rem;
+    }
+
+    .card {
+        padding: 15px;
+
+    }
+}
+
+/* Moblie  */
+
+@media (max-width: 480px) {
+    .grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    header h1 {
+        font-size: 1.2rem;
+    }
+
+    .card {
+        padding: 10px;
+    }
+
+    footer {
+        font-size: 0.9em;
+        padding: 10px;
+    }
 }
